data/all_generated_tests/raw_wast_tests/block_IncorrectConditionEvaluation_2264.wast
;; 5. **Test Description**: Create a block with depth `N`, containing multiple nested blocks. Include `br_if` in the innermost block with condition evaluation dependent on outer block results.    - **Constraint Checked**: Examines deep nesting and correct propagation of conditions from outer blocks.    - **Relation to Condition Evaluation**: Faulty depth handling or condition evaluation could lead to incorrect branch outcomes.

(assert_invalid
  (module (func $test-block-depth-N
    (block (result i32) 
      (i32.const 1)
      (block (param i32) 
        (block (param i32) 
          (block (param i32) 
            (block (param i32) 
              (br_if 2 (i32.const 0))
            )
          )
        )
      )
    )
  ))
  "type mismatch"
)